    to fill last word in para) by reverting one change from 4.16.0.74.

    remove keychart. (causes trouble on Windows/DOS, not needed)

    rename *.doc to *.txt since everything expects .doc to
    be Microsoft Word files. Delete generated file before copying
    new one over it.  remove cleanall target, added distclean synonym
    for clobber. install teach-jove and jove.qref with cmds.doc
    target for simplicity.

Author: Mark Moraes <moraes@computer.org>
Date:   Mon Feb 20 19:19:35 2023 -0500

    4.17.5.0 continued: forgot to put Beginner_Help call in jove.rc.in,
    (renamed jem1.txt to jem.text, and removed jem1.hlp, since new teach-jove
    command can replace about-jove mini-description). No real need for full
    jem.rc (those function key bindings clash with others, which would be
    confusing, and don't work in modern window systems anyway, since many of
    those function keys are intercepted by the desktop!)

    install jove.qref and jem.txt in SHAREDIR

    lower threshold to move objects from near to far in Makefile.wat so we can
    raise stack DOS build from 11000 to 18000 (since 11000 caused a stack
    overflow at least once -- 11500 did not, but seems worth some headroom;
    still handles about 35000 lines in a 200K executable)

    fix jexecpath bugs on NetBSD, FreeBSD (typos, stdbool clash),
    OpenIndiana (need getCWD before fixrelpath is called)

Author: Mark Moraes <moraes@computer.org>
Date:   Mon Feb 20 13:55:43 2023 -0500

    4.17.5.0 continued: WIN64 (x86_64-w64-mingw32) should build and work
    (JRWSIZE_T definition, avoid couple of ptr->unsigned long casts in
    debug printf)
    avoid "Unexpected" or "malformed" complaint when "else"
    or "endif" is followed by whitespace in joverc
    remove couple of dups in jove.qref
    fix typo ('0' should be '\0' in getvar(), fixes ifvar)
    adopt Debian jem* files if no .joverc or env var JOVENOHELP is not set to 1

Author: Mark Moraes <moraes@computer.org>