@@ -1,5 +1,5 @@
-.EH '\s-2%\s0'JOVE Manual for UNIX Users''
-.OH ''JOVE Manual for UNIX Users'\s-2%\s0'
+.EH '\s-2%\s0'JOVE User Manual''
+.OH ''JOVE User Manual'\s-2%\s0'
 .pn 1
 .bp
 .PX
