@@ -1,11 +1,11 @@
-Document: jove.man
+Document: jove.man.txt
 Title: Debian jove Manual
 Author: Jonathan Payne
 Abstract: JOVE is considered a display editor because normally the text being  edited is visible on the screen and is updated automatically as you type your commands.
 Section: Editors
 
-Format: postscript
-Files: /usr/share/doc/jove/jove.man.ps.gz
+Format: pdf
+Files: /usr/share/doc/jove/jove.man.pdf.gz
 
 Format: text
-Files: /usr/share/doc/jove/jove.man.gz
+Files: /usr/share/doc/jove/jove.man.txt.gz
