@@ -2,6 +2,6 @@ README
 debian/rc.d-jove
 doc/cmds.txt
 doc/example.rc
-doc/jove.man
-doc/jove.man.ps
+doc/jove.man.txt
+doc/jove.man.pdf
 doc/jove.qref
